[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm[toml] >= 6.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "easytypes"
version = "0.0.1"
description = "Allows to easily create structured with optional member type control at runtime"
keywords = ["type checking", "typeguard", "run-time type checking", "structures"]
readme = "README.md"
authors = [{name = "Reim, Elijah", email = "ellioh.72@gmail.com"}]
license = {text = "Apache Software License"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">= 3.11"
dependencies = [
    "typeguard>=3.0.2",
]

doc = [
    "packaging",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints >= 1.2.0",
]

[project.urls]
homepage = "https://example.com"
#documentation = "https://readthedocs.org"
repository = "https://github.com/e-reim/easytypes.git"
changelog = "https://github.com/e-reim/easytypes/blob/master/CHANGELOG.md"

[project.entry-points]
pytest11 = {typeguard = "typeguard._pytest_plugin"}

[tool.setuptools.package-data]
typeguard = ["py.typed"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
addopts = "-rsx --tb=short"
testpaths = "tests"
xfail_strict = true
filterwarnings = ["error"]

[tool.coverage.run]
source = ["typeguard"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]

[tool.ruff]
line-length = 88
select = [
    "E", "F", "W",  # default flake-8
    "I",            # isort
    "PGH",          # pygrep-hooks
    "UP",           # pyupgrade
    "B0",           # flake8-bugbear
]
ignore = [
    "PGH001",
    "B008",
]
target-version = "py37"
src = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
pretty = true
